--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body
     padding: 0px;
     margin: 0px;
 
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(64, 64, 64);
 
     display: flex;
 
-    color:#BBE1FA;
+    color:#d6d6d6;
 }
 
 #view-body
@@ -27,13 +27,13 @@ body
 
 #name
 {
-    background-color: black;
+    background-color: rgb(16, 16, 16);
     color: lightgrey;
 
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 10px;
+    margin-top: 20px;
 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 1);
@@ -50,8 +50,8 @@ nav
 {
     /* background-image: linear-gradient(90deg, #000 25%, rgb(141, 30, 30) 50%, rgb(0, 0, 0) 75%); */
 
-    background-color: #000000;
-    padding: 10px;
+    background-color: rgb(16, 16, 16);
+    padding: 5px;
 
     margin-top: 10px;
     border-radius: 10px;
@@ -62,7 +62,7 @@ nav
     display: flex;
     flex-direction: column;
     
-    margin-top: 105px;
+    margin-top: 115px;
     position: sticky;
 
     position: fixed;
@@ -77,17 +77,37 @@ nav
 .nav-button
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: lightgray;
+    background-color: #1B262C;
+    color: #d6d6d6;
+    border: 0px;
 
     border-radius: 10px;
     font-size: 20px;
+    margin: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 
-    margin-bottom: 4px;
-    margin-top: 4px;
-
+    padding: 3px;
     padding-left: 10px;
     padding-right: 10px;
+
+    border: 1px solid rgb(16, 16, 16)
 }
+
+.nav-button:hover
+{
+    background-color: rgb(16, 16, 16) !important;
+}   
+
+.nav-button:active
+{
+    border: 1px solid #d6d6d6 !important; 
+}
+
+#dark-mode
+{
+    cursor: not-allowed;
+} 
 
 #content
 {
@@ -95,6 +115,9 @@ nav
     box-shadow: 0 0 10px rgba(0, 0, 0, 1);
 
     padding: 20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-bottom: 20px;
     border-radius: 10px;
 }
 
